[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/GUI/TurnStats/SurveyLabel.gd" type="Script" id=1]
[ext_resource path="res://assets/GUI/Grey.tres" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Gotham_20.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/GUI/TurnStats/Q1A.gd" type="Script" id=4]
[ext_resource path="res://assets/GUI/TurnStats/Q2A.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/Gotham_small.tres" type="DynamicFontData" id=6]
[ext_resource path="res://assets/fonts/Gotham_16.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/GUI/TurnStats/PostSurvey.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 20
use_filter = true
font_data = ExtResource( 6 )

[node name="PostSurvey" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -300.0
margin_right = 500.0
margin_bottom = 300.0
script = ExtResource( 10 )

[node name="N" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="M" type="MarginContainer" parent="N"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 20.0
margin_right = -50.0
margin_bottom = -20.0

[node name="V" type="VBoxContainer" parent="N/M"]
margin_right = 900.0
margin_bottom = 560.0
custom_constants/separation = 20

[node name="H1" type="HBoxContainer" parent="N/M/V"]
margin_right = 900.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 75 )

[node name="LMargin" type="Control" parent="N/M/V/H1"]
margin_right = 246.0
margin_bottom = 75.0
size_flags_horizontal = 3

[node name="SurveyLabel" type="Label" parent="N/M/V/H1"]
margin_left = 250.0
margin_top = 12.0
margin_right = 650.0
margin_bottom = 62.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1
script = ExtResource( 1 )

[node name="RMargin" type="Control" parent="N/M/V/H1"]
margin_left = 654.0
margin_right = 900.0
margin_bottom = 75.0
size_flags_horizontal = 3

[node name="Q1" type="Label" parent="N/M/V"]
margin_top = 95.0
margin_right = 900.0
margin_bottom = 117.0
custom_fonts/font = ExtResource( 9 )
text = "Would you want to live in this neighbourhood?"
align = 1

[node name="HQ1" type="HBoxContainer" parent="N/M/V"]
margin_top = 137.0
margin_right = 900.0
margin_bottom = 165.0

[node name="LMargin" type="Control" parent="N/M/V/HQ1"]
margin_right = 296.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="Q1A" type="OptionButton" parent="N/M/V/HQ1"]
margin_left = 300.0
margin_right = 600.0
margin_bottom = 28.0
rect_min_size = Vector2( 300, 20 )
custom_fonts/font = ExtResource( 9 )
script = ExtResource( 4 )

[node name="RMargin" type="Control" parent="N/M/V/HQ1"]
margin_left = 604.0
margin_right = 900.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="Q2" type="Label" parent="N/M/V"]
margin_top = 185.0
margin_right = 900.0
margin_bottom = 207.0
custom_fonts/font = ExtResource( 9 )
text = "Do you think net-zero is achieveable in all aspects?"
align = 1

[node name="HQ2" type="HBoxContainer" parent="N/M/V"]
margin_top = 227.0
margin_right = 900.0
margin_bottom = 255.0

[node name="LMargin" type="Control" parent="N/M/V/HQ2"]
margin_right = 296.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="Q2A" type="OptionButton" parent="N/M/V/HQ2"]
margin_left = 300.0
margin_right = 600.0
margin_bottom = 28.0
rect_min_size = Vector2( 300, 20 )
custom_fonts/font = ExtResource( 9 )
script = ExtResource( 5 )

[node name="RMargin" type="Control" parent="N/M/V/HQ2"]
margin_left = 604.0
margin_right = 900.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="Q3" type="Label" parent="N/M/V"]
margin_top = 275.0
margin_right = 900.0
margin_bottom = 297.0
custom_fonts/font = ExtResource( 9 )
text = "Do you have any other feedback?"
align = 1

[node name="Q3A" type="TextEdit" parent="N/M/V"]
margin_top = 317.0
margin_right = 900.0
margin_bottom = 417.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )

[node name="Margin" type="Control" parent="N/M/V"]
margin_top = 437.0
margin_right = 900.0
margin_bottom = 457.0
rect_min_size = Vector2( 0, 20 )

[node name="H2" type="HBoxContainer" parent="N/M/V"]
margin_top = 477.0
margin_right = 900.0
margin_bottom = 527.0
rect_min_size = Vector2( 0, 50 )

[node name="LMargin" type="Control" parent="N/M/V/H2"]
margin_right = 346.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="N/M/V/H2"]
margin_left = 350.0
margin_right = 550.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
custom_fonts/font = ExtResource( 3 )
text = "Submit and exit"
clip_text = true

[node name="RMargin" type="Control" parent="N/M/V/H2"]
margin_left = 554.0
margin_right = 900.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="item_selected" from="N/M/V/HQ1/Q1A" to="." method="_on_Q1A_item_selected"]
[connection signal="item_selected" from="N/M/V/HQ2/Q2A" to="." method="_on_Q2A_item_selected"]
[connection signal="text_changed" from="N/M/V/Q3A" to="." method="_on_Q3A_text_changed"]
[connection signal="button_up" from="N/M/V/H2/CloseButton" to="." method="_on_CloseButton_button_up"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
